@@ -37,6 +37,20 @@ extern int joysticks_supported;
 void fuse_joystick_init( void );
 void fuse_joystick_end( void );
 
+typedef enum joystick_button {
+
+  JOYSTICK_BUTTON_RIGHT,
+  JOYSTICK_BUTTON_LEFT,
+  JOYSTICK_BUTTON_DOWN,
+  JOYSTICK_BUTTON_UP,
+  JOYSTICK_BUTTON_FIRE,
+
+} joystick_button;
+
+/* Called whenever the (Spectrum) joystick is moved or the fire button
+   pressed */
+void joystick_press( joystick_button button, int press );
+
 /* Default read function (returns data in Kempston format) */
 libspectrum_byte joystick_default_read( libspectrum_word port,
 					libspectrum_byte which );
